--- a/firelight/examples/configs/example_config_0.yml
+++ b/firelight/examples/configs/example_config_0.yml
@@ -1,7 +1,7 @@
 RowVisualizer: # stack the outputs of child visualizers as rows of an image grid
   input_mapping:
-    global: ['B': ':3', 'D': '0:9:3'] # Show only 3 samples in each batch ('B'), and some slices along depth ('D').
-    prediction: ['C': '0']  # Show only the first channel of the prediction
+    global: [B: ':3', D: '0:9:3'] # Show only 3 samples in each batch ('B'), and some slices along depth ('D').
+    prediction: [C: '0']  # Show only the first channel of the prediction
 
   pad_value: [0.2, 0.6, 1.0] # RGB color of separating lines
   pad_width: {B: 6, H: 0, W: 0, rest: 3} # Padding for batch ('B'), height ('H'), width ('W') and other dimensions.
@@ -9,13 +9,11 @@ RowVisualizer: # stack the outputs of child visualizers as rows of an image grid
   visualizers:
     # First row: Ground truth
     - IdentityVisualizer:
-        input_mapping:
-          tensor: 'target' # show the target
+        input: 'target' # show the target
 
     # Second row: Raw input
     - IdentityVisualizer:
-        input_mapping:
-          tensor: ['input', C: '0'] # Show the first channel ('C') of the input.
+        input: ['input', C: '0'] # Show the first channel ('C') of the input.
         cmap: viridis  # Name of a matplotlib colormap.
 
     # Third row: Prediction with segmentation boarders on top.
@@ -33,17 +31,16 @@ RowVisualizer: # stack the outputs of child visualizers as rows of an image grid
 
     # Fourth row: Foreground probability, calculated by sigmoid on prediction
     - IdentityVisualizer:
-        input_mapping:
+        input_mapping: # the input to the visualizer can also be specified as a dict under the key 'input mapping'.
           tensor: ['prediction', pre: 'sigmoid'] # Apply sigmoid function from torch.nn.functional before visualize.
         value_range: [0, 1] # Scale such that 0 is white and 1 is black. If not specified, whole range is used.
 
-    # visualize where norm of prediction is smaller than 2
+    # Fifth row: Visualize where norm of prediction is smaller than 2
     - ThresholdVisualizer:
         input_mapping:
           tensor:
             NormVisualizer: # Use the output of NormVisualizer as the input to ThresholdVisualizer
-              input_mapping:
-                tensor: 'prediction'
+              input: 'prediction'
               colorize: False
         threshold: 2
         mode: 'smaller'
